# physics-engine

./: .gitignore  Cargo.toml  README.md
src/: main.rs  vk_linux.rs  vk_macos.rs  vk_windows.rs  vulkan.rs
src/math/: constants.rs  transcendentals.rs
src/math_functions/: ast.rs  trigonometry.rs
src/physics/: mechanics.rs  vector.rs
